model trainer added

--- a/research/03_model_training.ipynb
+++ b/research/03_model_training.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
     "        dataflow_kwargs = dict(\n",
     "            target_size = self.config.params_image_size[:-1],\n",
     "            batch_size = self.config.params_batch_size,\n",
-    "            interpolation = \"bilinear\"\n",
+    "            interpolation = \"bilinear\",\n",
     "        )\n",
     "\n",
     "        valid_datagenerator = tf.keras.preprocessing.image.ImageDataGenerator(\n",
@@ -160,7 +160,6 @@
     "\n",
     "        self.valid_generator = valid_datagenerator.flow_from_directory(\n",
     "            directory=self.config.validation_data,\n",
-    "            subset=\"validation\",\n",
     "            shuffle=False,\n",
     "            **dataflow_kwargs\n",
     "        )\n",
@@ -180,7 +179,6 @@
     "\n",
     "        self.train_generator = train_datagenerator.flow_from_directory(\n",
     "            directory=self.config.training_data,\n",
-    "            subset=\"training\",\n",
     "            shuffle=True,\n",
     "            **dataflow_kwargs\n",
     "        )\n",
@@ -208,26 +206,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-06-08 03:51:52,373: INFO: common: yaml file: config/config.yaml loaded successfully!]\n",
-      "[2024-06-08 03:51:52,378: INFO: common: yaml file: params.yaml loaded successfully!]\n",
-      "[2024-06-08 03:51:52,383: INFO: common: created directory at: artifacts]\n",
-      "[2024-06-08 03:51:52,385: INFO: common: created directory at: artifacts/training]\n",
-      "Found 13 images belonging to 4 classes.\n",
-      "Found 491 images belonging to 4 classes.\n"
+      "[2024-06-08 04:43:54,190: INFO: common: yaml file: config/config.yaml loaded successfully!]\n",
+      "[2024-06-08 04:43:54,197: INFO: common: yaml file: params.yaml loaded successfully!]\n",
+      "[2024-06-08 04:43:54,199: INFO: common: created directory at: artifacts]\n",
+      "[2024-06-08 04:43:54,201: INFO: common: created directory at: artifacts/training]\n",
+      "Found 72 images belonging to 4 classes.\n",
+      "Found 613 images belonging to 4 classes.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-08 03:51:53.441087: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32\n",
+      "2024-06-08 04:43:55.223077: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32\n",
       "\t [[{{node Placeholder/_0}}]]\n"
      ]
     },
@@ -235,15 +233,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30/30 [==============================] - 77s 3s/step - loss: 23.3563 - accuracy: 0.2568\n"
+      "38/38 [==============================] - ETA: 0s - loss: 21.6508 - accuracy: 0.2931"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-08 03:53:10.710282: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32\n",
+      "2024-06-08 04:45:53.687601: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32\n",
       "\t [[{{node Placeholder/_0}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38/38 [==============================] - 138s 4s/step - loss: 21.6508 - accuracy: 0.2931 - val_loss: 30.2513 - val_accuracy: 0.1094\n"
      ]
     }
    ],
